erDiagram
    MEMBER ||--o{ ENROLLMENT : applies
    COURSE ||--o{ ENROLLMENT : has
    INSTRUCTOR ||--o{ COURSE : teaches
    ENROLLMENT ||--o{ PAYMENT : payment_history

    MEMBER {
        int member_id PK
        string name
        string email
        string status
    }
    INSTRUCTOR {
        int instructor_id PK
        string name
        string email
    }
    COURSE {
        int course_id PK
        int instructor_id FK
        string title
        int price
    }
    ENROLLMENT {
        int enrollment_id PK
        int member_id FK
        int course_id FK
        string status
    }
    PAYMENT {
        int payment_id PK
        int enrollment_id FK
        int amount
        string payment_status
    }
